...
            VStack(spacing: 5) {
                // Email text field
                TextField("Email", text: $userProfile.email)
                    .padding()
                    .background(Color.primary)
                    .cornerRadius(10)
                    .accessibilityIdentifier("CAEmail")
                    .onChange(of: userProfile.email) { _, newEmail in
                        isValidEmail = validateEmail(email: newEmail)
                    }

                // Password input (SecureField or TextField for testing)
                if isUITestMode() {
                    TextField("Password", text: $userProfile.password)
                        .accessibilityIdentifier("CAPassword")
                        .textContentType(.none)
                        .autocorrectionDisabled(true)
                        .padding()
                        .background(Color.primary)
                        .cornerRadius(10)
                        .onChange(of: userProfile.password) { _, newPWord in
...
                    }
                }

                // Confirm Password field
                if isUITestMode() {
                    TextField("Confirm Password", text: $confirmedPw)
                        .accessibilityIdentifier("CAConfirmPassword")
                        .textContentType(.none)
                        .autocorrectionDisabled(true)
                        .padding()
                        .background(Color.primary)
                        .cornerRadius(10)
                        .onChange(of: confirmedPw) { _, newPWord in
...
                    .padding()
                    .background(Color.CTA1)
                    .foregroundColor(Color.primary)
                    .cornerRadius(10)
            }
            .padding(.bottom)
            .accessibilityIdentifier("SignupButton")
            .navigationDestination(isPresented: $continueSignup) {
                AccountSetupView().environmentObject(userProfile)
            }

            // MARK: - Learn More Link

...
